@@ -1,3 +1,8 @@
+2011-02-26 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.4-05
+   * R/coefplot: add options of upper and lower conf.bounds.
+   * R/discrete.histogram: add a new plot function
+
 2011-02-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.4-04
    * R/binnedplot: pass addition graphical parameters to the function.
